; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_tcrypt.c_test_available.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/crypto/extr_tcrypt.c_test_available.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@check = common dso_local global i8** null, align 8
@.str = private unnamed_addr constant [8 x i8] c"alg %s \00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"found\0A\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"not found\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_available to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_available() #0 {
  %1 = alloca i8**, align 8
  %2 = load i8**, i8*** @check, align 8
  store i8** %2, i8*** %1, align 8
  br label %3

3:                                                ; preds = %7, %0
  %4 = load i8**, i8*** %1, align 8
  %5 = load i8*, i8** %4, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %20

7:                                                ; preds = %3
  %8 = load i8**, i8*** %1, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* %9)
  %11 = load i8**, i8*** %1, align 8
  %12 = load i8*, i8** %11, align 8
  %13 = call i64 @crypto_has_alg(i8* %12, i32 0, i32 0)
  %14 = icmp ne i64 %13, 0
  %15 = zext i1 %14 to i64
  %16 = select i1 %14, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0)
  %17 = call i32 (i8*, ...) @printk(i8* %16)
  %18 = load i8**, i8*** %1, align 8
  %19 = getelementptr inbounds i8*, i8** %18, i32 1
  store i8** %19, i8*** %1, align 8
  br label %3

20:                                               ; preds = %3
  ret void
}

declare dso_local i32 @printk(i8*, ...) #1

declare dso_local i64 @crypto_has_alg(i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
